created menu, content in menu
Code to make the menu work in js, css and html, styling of the menu in css, added content in the menu

--- a/site/index.html
+++ b/site/index.html
@@ -11,68 +11,71 @@
 </head>
 <body>
     <header>
-        <menu>
-            <div class="clear">
+        <div class="fade-layer" onclick="showMenu()"></div>
+        <div class="constantheader">
+            <div class="menu-button" onclick="showMenu()">
+                <i class="material-icons md-36">menu</i>
+            </div>
+            <div class="nameheader">
+                <a href="">Insert name here</a>
+            </div>
+            <div class="buttonheader">
+                <i class="material-icons md-36">shopping_cart</i>
+            </div>
+        </div>
+        <div class="menu">
+            <div class="clear" onclick="showMenu()">
                 <i class="material-icons md-36">clear</i>
             </div>
             <a href="">
                 <div class="menuitems">View All</div>
             </a>
             <a href="">
-               <div class="menuitems">Tops</div>
+                <div class="menuitems">Tops</div>
             </a>
             <a href="">
                 <div class="menuitems">Bottoms</div>
             </a>
-        </menu>
-        <div class="constantheader">
-            <div class="buttonheader">
-                <i class="material-icons md-36">menu</i>
-            </div>
-            <div class="nameheader">
-                <a href="">Insert name here</a>
-            </div>
-            <div class="buttonheader"><i class="material-icons md-36">shopping_cart</i></div>
         </div>
     </header>
     <main>
         <div class="productbox">
             <a href="">
-                <img src="../site/img/brandy.jpg" alt="">
+                <img src="../site/img/brandytop_small.jpg" alt="">
                 <div class="textbox"></div>
             </a>
         </div>
         <div class="productbox">
             <a href="">
-                <img src="../site/img/brandy.jpg" alt="">
+                <img src="../site/img/brandytop_small.jpg" alt="">
                 <div class="textbox"></div>
             </a>
         </div>
         <div class="productbox">
             <a href="">
-                <img src="../site/img/brandy.jpg" alt="">
+                <img src="../site/img/brandytop_small.jpg" alt="">
                 <div class="textbox"></div>
             </a>
         </div>
         <div class="productbox">
             <a href="">
-                <img src="../site/img/brandy.jpg" alt="">
+                <img src="../site/img/brandytop_small.jpg" alt="">
                 <div class="textbox"></div>
             </a>
         </div>
         <div class="productbox">
             <a href="">
-                <img src="../site/img/brandy.jpg" alt="">
+                <img src="../site/img/brandytop_small.jpg" alt="">
                 <div class="textbox"></div>
             </a>
         </div>
         <div class="productbox">
             <a href="">
-                <img src="../site/img/brandy.jpg" alt="">
+                <img src="../site/img/brandytop_small.jpg" alt="">
                 <div class="textbox"></div>
             </a>
         </div>
     </main>
-    
+    <script src="js/main.js"></script>
 </body>
 </html>
