Shopping Cart, Added pages, Small changes in html
Made two new html pages (shopping cart and a product page), Added classes and styled them to make the cart look like a functional cart, small changes in html and css

--- a/site/index.html
+++ b/site/index.html
@@ -17,11 +17,11 @@
                 <i class="material-icons md-36">menu</i>
             </div>
             <div class="nameheader">
-                <a href="">Insert name here</a>
+                <a href="index.html">Clotheooo</a>
             </div>
-            <div class="buttonheader">
+            <a href="shopping_cart.html">
                 <i class="material-icons md-36">shopping_cart</i>
-            </div>
+            </a>
         </div>
         <div class="menu">
             <div class="clear" onclick="showMenu()">
@@ -40,39 +40,57 @@
     </header>
     <main>
         <div class="productbox">
-            <a href="">
+            <a href="product_page.html">
                 <img src="../site/img/brandytop_small.jpg" alt="">
-                <div class="textbox"></div>
+                <div class="textbox">
+                    <h4>White Crop Top</h4>
+                    <p>8$</p>
+                </div>
             </a>
         </div>
         <div class="productbox">
             <a href="">
                 <img src="../site/img/brandytop_small.jpg" alt="">
-                <div class="textbox"></div>
+                <div class="textbox">
+                    <h4>White Crop Top</h4>
+                    <p>8$</p>
+                </div>
             </a>
         </div>
         <div class="productbox">
             <a href="">
                 <img src="../site/img/brandytop_small.jpg" alt="">
-                <div class="textbox"></div>
+                <div class="textbox">
+                    <h4>White Crop Top</h4>
+                    <p>8$</p>
+                </div>
             </a>
         </div>
         <div class="productbox">
             <a href="">
                 <img src="../site/img/brandytop_small.jpg" alt="">
-                <div class="textbox"></div>
+                <div class="textbox">
+                    <h4>White Crop Top</h4>
+                    <p>8$</p>
+                </div>
             </a>
         </div>
         <div class="productbox">
             <a href="">
                 <img src="../site/img/brandytop_small.jpg" alt="">
-                <div class="textbox"></div>
+                <div class="textbox">
+                    <h4>White Crop Top</h4>
+                    <p>8$</p>
+                </div>
             </a>
         </div>
         <div class="productbox">
             <a href="">
                 <img src="../site/img/brandytop_small.jpg" alt="">
-                <div class="textbox"></div>
+                <div class="textbox">
+                    <h4>White Crop Top</h4>
+                    <p>8$</p>
+                </div>
             </a>
         </div>
     </main>
