Small changes, Media Quary
Small changes, added media quary

--- a/site/product_page.html
+++ b/site/product_page.html
@@ -18,10 +18,11 @@
                 <i class="material-icons md-36">menu</i>
             </div>
             <div class="nameheader">
-                <a href="index.html">Insert name here</a>
+                <a href="index.html">Clotheooo</a>
             </div>
-                <i class="material-icons md-36">shopping_cart</i>
-            </div>
+            <a href="shopping_cart.html">
+                    <i class="material-icons md-36">shopping_cart</i>
+            </a>
         </div>
         <div class="menu">
             <div class="clear" onclick="showMenu()">
