--- a/site/shopping_cart.html
+++ b/site/shopping_cart.html
@@ -17,7 +17,7 @@
                 <i class="material-icons md-36">menu</i>
             </div>
             <div class="nameheader">
-                <a href="index.html">Insert name here</a>
+                <a href="index.html">Clotheooo</a>
             </div>
             <a href="shopping_cart.html">
                 <i class="material-icons md-36">shopping_cart</i>
